@@ -46,6 +46,8 @@ Enhancements
   * Selecting atoms by resid now respects icodes if they were present. Ie
     select_atoms('resid 163A') works! (Issue #839 PR #1066)
   * Added ability to read MMTF format files (#907 PR #1069)
+  * Added coordinates.null.NullWriter, which behaves like a Writer but
+    ignores all input; useful for suppressing output.
 
 Fixes
   * Removed MDAnalysis.analysis.PDBToBinaryTraj (Issue #1035)
@@ -87,11 +89,16 @@ Changes
   * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)
   * Fragments in Universe.fragment are now sorted by the index of their first
     atom. (Issue 1007)
-  * atoms.tranform/translate/rotate/rotateby return original atomgroup (Issue #1010)
-  * atoms.translate/rotateby don't accept AtomGroup tuples as parameters anymore (Issue #1025)
-  * atoms.rotate by default now uses the centroid as center of rotation like rotateby (Issue #1022)
+  * atoms.tranform/translate/rotate/rotateby return original atomgroup
+    (Issue #1010)  
+  * atoms.translate/rotateby don't accept AtomGroup tuples as
+    parameters anymore (Issue #1025)  
+  * atoms.rotate by default now uses the centroid as center of
+    rotation like rotateby (Issue #1022) 
   * XTCFile and TRRFile only raise IOError now on error.
   * Deprecate usage of MDAnalaysis.core.AtomGroup
+  * get_writer_for() returns NullWriter when filename=None instead of
+    raising TypeError
 
 Deprecations (Issue #599)
   * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
